# ia-ddd-studio

./: .coverage  .gitignore  CONSTITUTION.md  Dockerfile  PREMISE.md  README.md  VALUE.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: ARCHITECTURE.md  FULL_PROJECT_OVERVIEW.md  TOON_FORMAT.md
domains-example/: domain_1.json  domain_2.json  domain_3.json  transcription.json
src/: main.py
src/application/: graph_builder.py  pipeline.py
src/ddd_studio/: cli.py
src/domain/: events.py
src/infra/: inference_provider.py  streaming.py
src/models/: domain_analysis.py
src/prompts/: template.py
src/services/: ambiguity_detector.py  completeness_analyzer.py  nlp_extractor.py  refinement_orchestrator.py  spec_generator.py  transcription_service.py  workshop_simulation.py
src/ui/: reconstruct_utils.py  streamlit_app.py
tests/: conftest.py
tests/ai/: conftest.py  test_prompt_architectural_chat.py  test_prompt_domain_model_generation.py  test_prompt_domain_model_specs.py  test_prompt_gherkin_generation.py  test_prompt_gherkin_specs.py  test_prompt_narrative_transform_ui.py  test_prompt_refinement.py  test_prompt_refinement_analysis.py  test_prompt_semantic_analysis.py
tests/contract/: test_layer_violations.py  test_node_contracts.py  test_transcription_port.py
tests/features/: draft-model-validation.feature  draft-persistence.feature  draft-repository-contract.feature  draft-service-contract.feature  us1-draft-auto-creation.feature  us2-history-sidebar.feature  us3-draft-deletion.feature  us4-draft-auto-update.feature
tests/integration/: test_agent_integration.py  test_pipeline.py  test_prompt_migration.py  test_refinement_integration.py  test_transcription_cache.py
tests/unit/: test_agent_state.py  test_agent_tools.py  test_ambiguity_detector.py  test_analysis_cache.py  test_analysis_normalizer.py  test_analyze.py  test_bdd_batch_adjustments.py  test_bdd_completeness_analysis.py  test_bdd_contracts_validation.py  test_bdd_edge_cases.py  test_bdd_interactive_refinement.py  test_bdd_post_generation_reaction.py  test_bdd_registry.py  test_bdd_spec_refinement.py  test_bdd_template_core.py  test_cache_service.py  test_chat_agent.py  test_chat_component.py  test_chat_extended.py  test_completeness_analyzer.py  test_context_component.py  test_draft_model.py  test_draft_preview_component.py  test_draft_service.py  test_dynamic_config.py  test_error_events.py  test_events.py  test_events_emission.py  test_faster_whisper_adapter.py  test_file_cache.py  test_file_draft_repository.py  test_gemini_inference.py  test_google_transcription.py  test_graph_advanced.py  test_graph_builders.py  (+36 more)
(+81 files in other folders)
