[project]
name = "ddd-studio"
version = "1.0.0"
description = "AI-powered tool to convert workshop transcripts into DDD domain models."
authors = [
    { name = "Raul Alzate" }
]
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = [
    "streamlit==1.50.0",
    "python-dotenv==1.1.1",
    "langchain-core==1.2.20",
    "langchain-community==0.3.31",
    "langchain-google-genai==4.2.1",
    "langgraph==1.0.1",
    "pydantic==2.12.4",
    "streamlit-agraph==0.0.45",
    "pypdf==6.4.0",
    "google-cloud-speech==2.37.0",
    "google-generativeai==0.8.6",
    "pymupdf4llm==1.27.2.2",
    "py2puml==0.11.0",
    "requests>=2.32.0",
    "faster-whisper>=1.0.0",
    "pandas>=2.0.0",
    "graphviz>=0.20.0",
]

# --- CONFIGURACIÓN PARA EL CLI Y EL EMPAQUETADO ---
[project.scripts]
# Esto creará el comando "ddd-studio" en la terminal
ddd-studio = "ddd_studio.cli:main" 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# --------------------------------------------------

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-mock==3.15.1",
    "pytest-bdd==7.3.0",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.24.0",
    "pytest-base-url==2.1.0",
    "pytest-playwright==0.6.2",
    "anyio>=4.8.0",
    "langsmith>=0.1.0",
    "ruff>=0.9.0",
]

[tool.ruff]
# Target Python version
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# Enable Pyflakes (F) and a subset of the pycodestyle (E) codes by default.
# Also enable isort (I) and pyupgrade (UP).
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore long lines and import position in tests/specs
"tests/*" = ["E501", "E402", "E741", "F821"]
"specs/*" = ["E501", "E402", "E741"]
# Ignore long lines in UI components (often long strings/st.markdown)
"src/ddd_studio/ui/*" = ["E501"]

[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["tests", "specs"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/ddd_studio"]

[tool.hatch.build.targets.wheel.force-include]
# Streamlit config ships with the wheel. `.env` is intentionally NOT
# force-included: it holds secrets (GOOGLE_API_KEY, etc.) and is gitignored,
# so force-including it would break any build on a machine that doesn't have
# a local `.env` (CI, fresh clones). Users set env vars directly or drop an
# `.env` next to their install.
"src/ddd_studio/.streamlit" = "ddd_studio/.streamlit"